hphp/hack/test/typecheck/abstract_typeconsts/abstract_in_concrete_class.php.exp
File "abstract_in_concrete_class.php", line 5, characters 23-23:
Type constant `T` is abstract but the class is concrete. Either provide an implementation here. (Typing[4465])
  File "abstract_in_concrete_class.php", line 4, characters 7-7:
  Or make the class abstract.
File "abstract_in_concrete_class.php", line 9, characters 23-23:
Type constant `T` is abstract but the class is final. Either provide an implementation here. (Typing[4465])
  File "abstract_in_concrete_class.php", line 8, characters 13-13:
  Or make the class abstract and not final.
