hphp/hack/test/typecheck/abstract_typeconsts/abstract_in_concrete_class.php
<?hh // strict
// Copyright 2004-present Facebook. All Rights Reserved.

class C {
  abstract const type T = int;
}

final class D {
  abstract const type T = int;
}
